# eo_analysis_usangu

./: .gitignore  README.md  environment.yml  pyproject.toml
code/: download_pixc.py  eo_tools.py  gee_exports_S2.ipynb  generate_pixc_raster.py  geotif2png.py  png2giff.py  readme.md  swot_download_tools.py
data/shapefiles/: height_TS_locations.dbf  height_TS_locations.shp  height_TS_locations.shx  river_network_manual_dissolved_smoothed_split_update011625.dbf  river_network_manual_dissolved_smoothed_split_update011625.qmd  river_network_manual_dissolved_smoothed_split_update011625.shx  wetland_fans_domain_37S.dbf  wetland_fans_domain_37S.shp  wetland_fans_domain_37S.shx
notebooks/: PALSAR2_analysis.ipynb  download_pixc.ipynb  process_pixc.ipynb  view_pixc.ipynb
