[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# location of package relative to the repository root (e.g. alternatively "src/rk-altimetry")
# note: the package name 'rk-altimetry' can be different from the project name on PyPI
#       the project name (PyPI) is used for pip install, whereas the package name is used for imports
packages = ["HydroEO"]  

[tool.hatch.build.targets.sdist]
exclude = ["notebooks", "tests", "images"]

[project]
# name on PyPI (e.g. pip install rk-altimetry)
name = "HydroEO"
version = "0.0.1"
dependencies = [
    "h5netcdf==1.4.0",
    "h5py==3.11.0",
    "netcdf4==1.7.1",
    "tqdm==4.66.5",
    "numpy==2.0.2",
    "pandas==2.2.3",
    "geopandas==1.0.1",
    "shapely==2.0.6",
    "matplotlib==3.9.2",
    "seaborn==0.13.2",
    "cmcrameri==1.9",
    "eodag==3.0.0",
    "scikit-learn==1.5.2",
    "py-hydroweb==1.0.2",
    "harmony-py==0.5.1"
]

authors = [
  { name="Connor Chewning", email="cwch@dhigroup.com" },
]
description = "Easy access altimetry for water resource applications"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 2 - Pre-Alpha",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
dev = [
  "build",
  "pytest",
  "ruff",
  "mypy",
  "mkdocs",
  "mkdocstrings[python]", 
  "mkdocs-material"
]

test= [
  "pytest",
  "pytest-cov",
  "mypy",
]

notebooks = [
  "jupyter",
]

[project.urls]
"Homepage" = "https://github.com/DHI/rk-altimetry"
"Bug Tracker" = "https://github.com/DHI/rk-altimetry/issues"


[tool.ruff]
# ignore long lines
lint.ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
warn_unreachable = false
no_implicit_optional = true

[tool.uv.workspace]
members = [
    "hydrocron-env",
]
